[package]
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
description = "A high-performance async-task scheduler"
edition = "2018"
license = "ISC"
name = "smolscale"
repository = "https://github.com/geph-official/smolscale"
version = "0.3.52"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
async-executor = "1.4.0"
async-io = "1.3.1"
async-task = "4"
event-listener = "2.5.1"
futures-lite = "1.11.3"
once_cell = "1.5.2"
pin-project-lite = "0.2.1"
scopeguard = "1.1.0"

log = "0.4.16"
slab = "0.4.2"
# concurrent-queue="1.2.2"
num_cpus = "1"
# rtrb="0.1.4"
# spin={version="0.9", default-features=false, features=["mutex", "spin_mutex"]}
backtrace = "0.3"
cache-padded = "1"
crossbeam-deque = "0.8.1"
fastrand = "1"
flume = "0.10.12"
futures-intrusive = "0.4"
# stacker="0.1"
# parking_lot = "0.11.1"
async-global-executor = {version = "2", features = ["async-io"]}
# moka = "0.9.4"
async-channel = "1.5.1"
concurrent-queue = "2.0.0"
crossbeam-queue = "0.3.6"
crossbeam-utils = "0.8.12"
dashmap = "5.4.0"
futures-util = "0.3.25"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
smallvec = "1.10.0"
st3 = "0.4"
tabwriter = "1.2.1"
waker-fn = "1.1.0"

[profile.release]
debug = 2
opt-level = 3
overflow-checks = true
panic = "abort"
# lto=true
# codegen-units=1

[dev-dependencies]
async-channel = "1.5.1"
criterion = "0.3"
env_logger = "0.9"

async-oneshot = "0.4.2"

[[bench]]
harness = false
name = "my_benchmark"

[[bench]]
harness = false
name = "lifetimed_benchmarks"

[features]
# Defines a feature named `webp` that does not enable any other features.
preempt = []
